Gray-Space/src/objects/GS_Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>GS_Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_City__c</fullName>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_State__c</fullName>
        <label>State</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Used_Capacity__c</fullName>
        <label>Used Capacity</label>
        <summarizedField>GS_WarehouseLineItem__c.GS_Quantity__c</summarizedField>
        <summaryForeignKey>GS_WarehouseLineItem__c.GS_Warehouse__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>